sandbox/output
TicketDispenserTest.java:62: error: cannot find symbol
        TicketDispenser vipTicketDispenser = new TicketDispenser(turnNumberSequence);    
                                                                 ^
  symbol:   variable turnNumberSequence
  location: class TicketDispenserTest
1 error
